client/src/shared/styles/global.css
@import "tailwindcss";

:root {
  font-family:
    system-ui, Avenir, "JetBrains Mono", Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  --text-shadow: 3px 2px 4px rgba(0, 0, 0, 0.6);
  --without-theme: white;
}

[data-theme="light"] {
  --hue: 220;

  --background: hsl(var(--hue), 20%, 78%);
  --text: hsl(var(--hue), 35%, 15%);
  --card-bg: hsl(var(--hue), 20%, 83%);
  --card-text: hsl(var(--hue), 35%, 15%);
  --category-text: hsl(var(--hue), 20%, 60%);
  --description-text: hsl(var(--hue), 25%, 35%);
  --meta-text: hsl(var(--hue), 25%, 50%);
  --button-bg: hsl(var(--hue), 30%, 80%);
  --button-text: hsl(var(--hue), 35%, 15%);
  --button-hover-bg: hsl(var(--hue), 30%, 75%);
  --border: hsl(var(--hue), 5%, 60%);
  --border-disabled: hsl(var(--hue), 30%, 60%);
}

[data-theme="dark"] {
  --hue: 210;

  --background: hsl(var(--hue), 30%, 10%);
  --text: hsl(var(--hue), 35%, 90%);
  --card-bg: hsl(var(--hue), 25%, 15%);
  --card-text: hsl(var(--hue), 35%, 90%);
  --category-text: hsl(var(--hue), 20%, 70%);
  --description-text: hsl(var(--hue), 25%, 80%);
  --meta-text: hsl(var(--hue), 15%, 60%);
  --button-bg: hsl(var(--hue), 25%, 20%);
  --button-text: hsl(var(--hue), 35%, 90%);
  --button-hover-bg: hsl(var(--hue), 25%, 30%);
  --border: hsl(var(--hue), 20%, 40%);
  --border-disabled: hsl(var(--hue), 20%, 20%);
}

[data-theme="sepia"] {
  --hue: 30;

  --background: hsl(var(--hue), 30%, 10%);
  --text: hsl(var(--hue), 35%, 90%);
  --card-bg: hsl(var(--hue), 30%, 15%);
  --card-text: hsl(var(--hue), 35%, 90%);
  --category-text: hsl(var(--hue), 60%, 60%);
  --description-text: hsl(var(--hue), 45%, 75%);
  --meta-text: hsl(var(--hue), 40%, 55%);
  --button-bg: hsl(var(--hue), 55%, 25%);
  --button-text: hsl(var(--hue), 35%, 90%);
  --button-hover-bg: hsl(var(--hue), 55%, 35%);
  --border: hsl(var(--hue), 45%, 50%);
  --border-disabled: hsl(var(--hue), 45%, 30%);
}

[data-theme="sepia-light"] {
  --hue: 30;

  --background: hsl(var(--hue), 40%, 15%);
  --text: hsl(var(--hue), 35%, 90%);
  --card-bg: hsl(var(--hue), 40%, 20%);
  --card-text: hsl(var(--hue), 35%, 90%);
  --category-text: hsl(var(--hue), 60%, 60%);
  --description-text: hsl(var(--hue), 45%, 75%);
  --meta-text: hsl(var(--hue), 60%, 55%);
  --button-bg: hsl(var(--hue), 55%, 30%);
  --button-text: hsl(var(--hue), 35%, 90%);
  --button-hover-bg: hsl(var(--hue), 55%, 40%);
  --border: hsl(var(--hue), 55%, 50%);
  --border-disabled: hsl(var(--hue), 55%, 30%);
}

[data-theme="blue"] {
  --hue: 220;

  --background: hsl(var(--hue), 30%, 10%);
  --text: hsl(var(--hue), 35%, 90%);
  --card-bg: hsl(var(--hue), 35%, 15%);
  --card-text: hsl(var(--hue), 35%, 90%);
  --category-text: hsl(var(--hue), 60%, 60%);
  --description-text: hsl(var(--hue), 45%, 75%);
  --meta-text: hsl(var(--hue), 40%, 55%);
  --button-bg: hsl(var(--hue), 55%, 25%);
  --button-text: hsl(var(--hue), 35%, 90%);
  --button-hover-bg: hsl(var(--hue), 55%, 35%);
  --border: hsl(var(--hue), 45%, 50%);
  --border-disabled: hsl(var(--hue), 45%, 30%);
}

[data-theme="green"] {
  --hue: 160;

  --background: hsl(var(--hue), 30%, 10%);
  --text: hsl(var(--hue), 35%, 90%);
  --card-bg: hsl(var(--hue), 30%, 15%);
  --card-text: hsl(var(--hue), 35%, 90%);
  --category-text: hsl(var(--hue), 50%, 60%);
  --description-text: hsl(var(--hue), 40%, 75%);
  --meta-text: hsl(var(--hue), 35%, 50%);
  --button-bg: hsl(var(--hue), 45%, 25%);
  --button-text: hsl(var(--hue), 35%, 90%);
  --button-hover-bg: hsl(var(--hue), 45%, 35%);
  --border: hsl(var(--hue), 45%, 50%);
  --border-disabled: hsl(var(--hue), 45%, 30%);
}

[data-theme="purple"] {
  --hue: 270;

  --background: hsl(var(--hue), 40%, 10%);
  --text: hsl(var(--hue), 35%, 90%);
  --card-bg: hsl(var(--hue), 35%, 16%);
  --card-text: hsl(var(--hue), 35%, 90%);
  --category-text: hsl(var(--hue), 60%, 70%);
  --description-text: hsl(var(--hue), 45%, 80%);
  --meta-text: hsl(var(--hue), 40%, 60%);
  --button-bg: hsl(var(--hue), 55%, 30%);
  --button-text: hsl(var(--hue), 35%, 90%);
  --button-hover-bg: hsl(var(--hue), 55%, 40%);
  --border: hsl(var(--hue), 50%, 45%);
  --border-disabled: hsl(var(--hue), 50%, 25%);
}

[data-theme="red"] {
  --hue: 350;

  --background: hsl(var(--hue), 35%, 10%);
  --text: hsl(var(--hue), 20%, 90%);
  --card-bg: hsl(var(--hue), 30%, 15%);
  --card-text: hsl(var(--hue), 20%, 90%);
  --category-text: hsl(var(--hue), 60%, 65%);
  --description-text: hsl(var(--hue), 40%, 80%);
  --meta-text: hsl(var(--hue), 30%, 55%);
  --button-bg: hsl(var(--hue), 60%, 25%);
  --button-text: hsl(var(--hue), 20%, 90%);
  --button-hover-bg: hsl(var(--hue), 60%, 35%);
  --border: hsl(var(--hue), 50%, 40%);
  --border-disabled: hsl(var(--hue), 50%, 20%);
}

[data-theme="teal"] {
  --hue: 180;

  --background: hsl(var(--hue), 35%, 9%);
  --text: hsl(var(--hue), 30%, 90%);
  --card-bg: hsl(var(--hue), 30%, 14%);
  --card-text: hsl(var(--hue), 30%, 90%);
  --category-text: hsl(var(--hue), 50%, 65%);
  --description-text: hsl(var(--hue), 35%, 80%);
  --meta-text: hsl(var(--hue), 25%, 55%);
  --button-bg: hsl(var(--hue), 50%, 25%);
  --button-text: hsl(var(--hue), 30%, 90%);
  --button-hover-bg: hsl(var(--hue), 50%, 35%);
  --border: hsl(var(--hue), 40%, 45%);
  --border-disabled: hsl(var(--hue), 40%, 25%);
}

[data-theme="flame"] {
  --hue: 15;

  --background: hsl(var(--hue), 40%, 10%);
  --text: hsl(var(--hue), 35%, 90%);
  --card-bg: hsl(var(--hue), 35%, 16%);
  --card-text: hsl(var(--hue), 35%, 90%);
  --category-text: hsl(var(--hue), 70%, 65%);
  --description-text: hsl(var(--hue), 50%, 75%);
  --meta-text: hsl(var(--hue), 40%, 55%);
  --button-bg: hsl(var(--hue), 60%, 30%);
  --button-text: hsl(var(--hue), 35%, 90%);
  --button-hover-bg: hsl(var(--hue), 60%, 40%);
  --border: hsl(var(--hue), 50%, 45%);
  --border-disabled: hsl(var(--hue), 50%, 25%);
}
/* ... */

